--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 aiosqlite==0.17.0
-aiostream==0.4.3
-asciimatics==1.11.0
-click==7.1.2
+aiostream==0.4.4
+asciimatics==1.14.0
+click==8.1.3
+colorama==0.4.4
 future==0.18.2
 keyboard==0.13.5
-mypy==0.780
+mypy==0.960
 mypy-extensions==0.4.3
-Pillow==8.2.0
+Pillow==9.1.1
 pyfiglet==0.8.post1
-pywin32==227
-pywin32-stubs==0.1.4
-typed-ast==1.4.1
-typing-extensions==3.7.4.2
-wcwidth==0.2.3
+pywin32==304
+pywin32-stubs==0.1.6
+tomli==2.0.1
+typing_extensions==4.2.0
+wcwidth==0.2.5
